--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+
+# VIM
+.*.swp
+
+# Emacs
+*~
+
+.DS_Store
+.idea/
+.vscode/
+
+.golangci-bin
